fix style for send image button on mobile

--- a/css/threads.less
+++ b/css/threads.less
@@ -163,12 +163,12 @@
     height: @message-form-height;
 
     textarea {
-      width: 90%;
+      width: auto;
       height: 50px;
       resize: none;
       padding: 15px;
       .mobile({
-        padding-right: 75px;
+        padding-right: 50px;
       });
       border: none;
 
